Fix for 'Callback message in sequence diagram cannot be resized'

umbrello/umlwidgets/messagewidget.{h,cpp}
- Reimplement UMLWidget::isInResizeArea instead of resizeCursor.
  Reason: In case of a message widget running from right to left, the
  resize area is at the left bottom corner because the message's
  execution specification is also at the left.  Furthermore, the right
  side may be covered up by another message's execution specification.

umbrello/umlwidgets/umlwidget.cpp
- In function mousePressEvent extend debug message to show pos() and
  event->scenePos().
- In function paint(QPainter*,const QStyleOptionGraphicsItem*, QWidget*)
  case (option->state & QStyle::State_Selected)
    case (m_resizable && w >= s+8 && h >= s+8),
  - int horSide initialized to `w' replaces variable `right';
  - if baseType() is wt_Message and the message's role A ObjectWidget is
    to the right of the role B ObjectWidget then set horSide to a small
    value in order to place the resize anchor at the role B object;
  - in calls to painter->drawLine() use horSide in lieu of `right'.

BUG: 429794